test_suite/tests/ui/string/derive/from.stderr
error: #[nutype] cannot derive `From` trait, because there is validation defined. Use `TryFrom` instead.
 --> tests/ui/string/derive/from.rs:5:12
  |
5 |     derive(From),
  |            ^^^^
